Sun Apr 16 21:53:02 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * DevGuideExamples/DDS/Messenger/DataReaderListener.cpp:
        * tests/DCPS/Reconnect/DataReaderListener.cpp:
        * tests/DCPS/Reconnect/DataWriterListener.cpp:
        * tests/DCPS/Serializer/SerializerTest.cpp:
        * tests/transport/simple_n/SimpleDataWriter.cpp:
        * tests/transport/udp_simple/SimpleDataWriter.cpp:

          More scoreboard directed cleanup.

        * tests/DCPS/FooTest4/main.cpp:

          This change from std::string to ACE_CString was not dictated by
          the nightly scoreboard, but my local PC failed to compile the
          test as provided with std::string. This is on my home x86-32
          running Linux 2.6.10-1.770_FC2 with gcc version 3.3.3 20040412
          (Red Hat Linux 3.3.3-7). I felt it was not a big deal to add the
          ACE_CString since the test code is already linking in ACE to do
          parameter parsing.

Sun Apr 16 07:30:45 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendStrategy.h:

          Removed extraneous comma from enumeration list. I noticed that
          the enumeration also contains "NOTIFY_IMMEADIATELY" which should
          be changed to "NOTIFY_IMMEDIATELY". I'm not going to change that
          because I don't know the implications of such a change.

Sat Apr 15 13:23:09 USMST 2006  Yan Dai  <dai_y@ociweb.com>

        These changes are tested on linux and fixed the deadlock situation
        during reconnecting.

        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:
        * dds/DCPS/transport/framework/TransportSendStrategy.h:
        * dds/DCPS/transport/simpleTCP/SimpleTcpConnection.cpp:
        * dds/DCPS/transport/simpleTCP/SimpleTcpConnection.h:
        * dds/DCPS/transport/simpleTCP/SimpleTcpReceiveStrategy.cpp:
        * dds/DCPS/transport/simpleTCP/SimpleTcpReconnectTask.cpp: